--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_gui_py
-	previous = 
-	base = d67cab19539f
+	previous = d67cab19539f
+	base = 1a106cb4639b
 	trim = 
 	trimbase = 
