--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_gui_cpp
-	previous = 
-	base = c9974d2bff1d
+	previous = c9974d2bff1d
+	base = 82c0810619fb
 	trim = 
 	trimbase = 
