--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_py_common
-	previous = 
-	base = de34ec7e2cc2
+	previous = de34ec7e2cc2
+	base = 1e1953da8c68
 	trim = 
 	trimbase = 
