--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt
-	previous = 
-	base = 8b21f7d465ab
+	previous = 8b21f7d465ab
+	base = f88f1df621df
 	trim = 
 	trimbase = 
