--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rqt_gui
-	previous = 
-	base = 5853d0195094
+	previous = 5853d0195094
+	base = df18f0ecb2d0
 	trim = 
 	trimbase = 
