--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/rqt_py_common
+	parent = release/rolling/rqt_py_common/1.5.0-2
 	previous = de34ec7e2cc2
 	base = 89d9538b4d5b
 	trim = 
