--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/rqt_gui_py
+	parent = release/rolling/rqt_gui_py/1.5.0-2
 	previous = d67cab19539f
 	base = 5cf0a226c075
 	trim = 
