--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/rqt_gui
+	parent = release/rolling/rqt_gui/1.5.0-2
 	previous = 5853d0195094
 	base = ba1221daeb09
 	trim = 
