--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/rqt
+	parent = release/rolling/rqt/1.5.0-2
 	previous = 8b21f7d465ab
 	base = dd3514f4f94c
 	trim = 
