--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/rqt_gui_cpp
+	parent = release/rolling/rqt_gui_cpp/1.5.0-2
 	previous = c9974d2bff1d
 	base = 9fd67f7092b5
 	trim = 
